Moving over to using async patterns and events Bump version to 0.1.0 Addons: Changed to polling "127.0.0.1" instead of "localhost" because apparently thats better current_song_wtv: Added a media player like progress bar for song timer Added song_logger addon to keep a log of played songs

--- a/addons/current_song_wtv/current_song.html
+++ b/addons/current_song_wtv/current_song.html
@@ -21,6 +21,7 @@
 				<h1 class="artist_name"></h1>
 				<h1 class="song_name"></h1>
 				<h1 class="album_name"></h1>
+				<div class="progress_bar"><p class="progress_bar_text"></p><div class="progress_bar_inner"></div></div>
 			</div>
 		</div>
 	</body>
