--- a/addons/current_song_wtv/current_song.html
+++ b/addons/current_song_wtv/current_song.html
@@ -14,13 +14,15 @@
 	<body>
 		<div class="popup">
 			<div class="header"><img class="pick" src="rs_pick.png">
-				<h1 class="title">CURRENT SONG</h1><h1 class="accuracy_percentage title"></h1>
+				<h1 class="title">CURRENT SONG</h1><h1 class="accuracy_percentage"></h1>
 			</div>
 			<div class="content">
 				<img class="album_cover">
-				<h1 class="artist_name"></h1>
-				<h1 class="song_name"></h1>
-				<h1 class="album_name"></h1>
+				<div class="song_details">
+					<h1 class="artist_name"></h1>
+					<h1 class="song_name"></h1>
+					<h1 class="album_name"></h1>
+				</div>
 				<div class="progress_bar"><p class="progress_bar_text"></p><div class="progress_bar_inner"></div></div>
 			</div>
 		</div>
