Update addons to lib changes Update lib Add vuejs to deps

--- a/addons/timeline/timeline.html
+++ b/addons/timeline/timeline.html
@@ -8,9 +8,10 @@
 		<link rel="stylesheet" type="text/css" href="style.css"> 
 		<link rel="stylesheet" type="text/css" href="../_deps/jquery-ui.css"> 
 
-		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+		<script src="../_deps/vue.js"></script>
 		<script type="text/javascript" src="timeline.js"></script>
 		<link rel="stylesheet" type="text/css" href="timeline.css">
+		<script src="../_deps/sniffer-poller.js"></script>
 		<script src="../_deps/sniffer-storage.js"></script>
 		<script src="../_deps/jQuery-3.2.1.js"></script>
 		<script src="../_deps/jQuery-ui.js"></script>
