--- a/addons/song_logger/song_logger.html
+++ b/addons/song_logger/song_logger.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css"> 
 
 		<script src="../_deps/jQuery-3.2.1.js"></script>
+		<script src="../_deps/sniffer-poller.js"></script>
 		<script src="script.js"></script>
 	</head>
 	<body>
