--- a/addons/current_song_v3/current_song_v3.html
+++ b/addons/current_song_v3/current_song_v3.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-		<title>RockSniffer Current Song Display</title>
+		<title>RockSniffer Current Song Display (Based on v2, edited by PoizenJam)</title>
 
 		<link rel="stylesheet" type="text/css" href="style.css"> 
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
