--- a/addons/accuracy_chart/accuracy_chart.html
+++ b/addons/accuracy_chart/accuracy_chart.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>RockSniffer Accuracy Chart</title>
 
+		<script src="../_deps/config-ui.js"></script>
 		<script type="text/javascript" src="../_deps/jquery-3.2.1.js"></script>
 		<script type="text/javascript" src="../_deps/sniffer-poller.js"></script>
 		<script type="text/javascript" src="../_deps/sniffer-storage.js"></script>
