--- a/addons/current_song_v3/current_song_v3.html
+++ b/addons/current_song_v3/current_song_v3.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css"> 
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
+		<script src="../_deps/config-ui.js"></script>
 		<script src="../_deps/jquery-3.2.1.js"></script>
 		<script src="../_deps/vue.js"></script>
 		<script src="../_deps/sniffer-storage.js"></script>
