--- a/addons/debug_addon/debug_addon.html
+++ b/addons/debug_addon/debug_addon.html
@@ -5,6 +5,7 @@
 
 		<title>RockSniffer Debug Addon</title>
 
+		<script src="../_deps/config-ui.js"></script>
 		<script src="../_deps/jquery-3.2.1.js"></script>
 		<script src="script.js"></script>
 
