--- a/addons/timeline/timeline.html
+++ b/addons/timeline/timeline.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css"> 
 		<link rel="stylesheet" type="text/css" href="../_deps/jquery-ui.css"> 
 
+		<script src="../_deps/config-ui.js"></script>
 		<script src="../_deps/vue.js"></script>
 		<script type="text/javascript" src="timeline.js"></script>
 		<link rel="stylesheet" type="text/css" href="timeline.css">
