--- a/addons/Arcade_v1_SA/Arcade.html
+++ b/addons/Arcade_v1_SA/Arcade.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css"> 
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
+		<script src="../config.js"></script>
 		<script src="../config-ui.js"></script>
 		<script src="../_deps/jquery-3.2.1.js"></script>
 		<script src="../_deps/vue.js"></script>
