--- a/addons/song_stats/song_stats.html
+++ b/addons/song_stats/song_stats.html
@@ -22,6 +22,14 @@
 				<h1 class="accuracy_percentage"></h1>
 			</div>
 			<div class="section">
+				<h1>NIN:</h1>
+				<h1 class="accuracy_min"></h1>
+			</div>
+			<div class="section">
+				<h1>MAX:</h1>
+				<h1 class="accuracy_max"></h1>
+			</div>
+			<div class="section">
 				<h1>STREAK:</h1>
 				<h1 class="streak"></h1>
 				<h1>/</h1>
@@ -30,10 +38,6 @@
 			<div class="section">
 				<h1>MISSES:</h1>
 				<h1 class="misses"></h1>
-			</div>
-			<div class="section">
-				<h1>POTENTIAL:</h1>
-				<h1 class="accuracy_potential"></h1>
 			</div>
 		</div>
 	</div>
