--- a/addons/song_stats/song_stats.html
+++ b/addons/song_stats/song_stats.html
@@ -22,7 +22,7 @@
 				<h1 class="accuracy_percentage"></h1>
 			</div>
 			<div class="section">
-				<h1>NIN:</h1>
+				<h1>MIN:</h1>
 				<h1 class="accuracy_min"></h1>
 			</div>
 			<div class="section">
